--- a/app/views/factory/our/carts/_list/_production.html.erb
+++ b/app/views/factory/our/carts/_list/_production.html.erb
@@ -1,6 +1,6 @@
 <div class="weui-media-box weui-media-box_appmsg">
   <div class="weui-media-box__hd">
-    <%= link_to({ controller: '/factory/productions', action: 'show', id: model.product_id }, text: true) do %>
+    <%= link_to({ controller: '/factory/productions', action: 'show', id: model.product_id }, state: 'enter', text: true) do %>
       <%= image_tag model.product.logo, class: 'image is-64x64' if model.product.logo.attached? %>
     <% end %>
   </div>
