--- a/app/views/factory/our/carts/_list/_production.html.erb
+++ b/app/views/factory/our/carts/_list/_production.html.erb
@@ -1,11 +1,11 @@
 <div class="weui-media-box weui-media-box_appmsg">
   <div class="weui-media-box__hd">
-    <%= link_to({ controller: '/factory/productions', action: 'show', id: model.product_id }, state: 'enter', text: true) do %>
+    <%= link_to({ controller: 'productions', action: 'show', id: model.id }, state: 'enter', text: true) do %>
       <%= image_tag model.product.logo, class: 'image is-64x64' if model.product.logo.attached? %>
     <% end %>
   </div>
   <div class="weui-media-box__bd">
-    <%= link_to({ controller: '/factory/productions', action: 'show', id: model.product_id }, text: true, class: 'is-flex is-flex-direction-column') do %>
+    <%= link_to({ controller: 'productions', action: 'show', id: model.id }, state: 'enter', text: true, class: 'is-flex is-flex-direction-column') do %>
       <h4 class="weui-media-box__title"><%= model.name %></h4>
       <p class="weui-media-box__desc pt-0">
         <%= model.product.description %>
