--- a/app/views/factory/productions/_show/_breadcrumb.html+phone.erb
+++ b/app/views/factory/productions/_show/_breadcrumb.html+phone.erb
@@ -1,6 +1,6 @@
 <div class="weui-panel is-borderless">
   <div data-controller="mini-program" class="weui-panel__hd as-bar">
-    <%= link_to(action: 'index', state: 'return') do %>
+    <%= link_to({ action: 'index' }, state: 'return') do %>
       <i class="fa-solid fa-lg fa-fw-1 fa-angle-left"></i>
     <% end %>
     <div class="weui-title"><%= @production.name %></div>
