--- a/app/views/factory/our/productions/_members/_index_tbody.html+phone.erb
+++ b/app/views/factory/our/productions/_members/_index_tbody.html+phone.erb
@@ -12,7 +12,7 @@
     </div>
   </div>
   <div class="level-right mt-0">
-  <% unless model.cart_items.find(&->(i){ i.good_type == @production.class_name && i.good_id == @production.id && i.produce_on.to_s == params[:produce_on].to_s && i.scene_id.to_s == params[:scene_id].to_s }) %>
+  <% unless @items.find(&->(i){ i.good_type == @production.class_name && i.good_id == @production.id && i.produce_on.to_s == params[:produce_on].to_s && i.scene_id.to_s == params[:scene_id].to_s }) %>
     <%= render partial: 'add_cart', locals: { model: @production, member: model } %>
   <% end if @production %>
   </div>
