--- a/app/views/factory/our/productions/_members/_cart.html.erb
+++ b/app/views/factory/our/productions/_members/_cart.html.erb
@@ -1,6 +1,8 @@
 <div class="field has-addons">
   <div class="control">
-    <%= button_to({ controller: 'trade/our/items', action: 'update', id: item.id }, method: :patch, state: 'redirect_return', params: { '[item]number': item.number - 1 }, class: 'mr-1', form: { data: { turbo_scroll: true } }) do %>
+    <%= button_to({ controller: 'trade/our/items', action: 'update', id: item.id }, method: :patch, state: 'redirect_return', class: 'mr-1', form: { data: { turbo_scroll: true } }) do %>
+      <%= f.number_field :number, value: item.number - 1 %>
+      <%= f.text_field :current_cart_id, value: @cart.id %>
       <i class="fa-solid fa-circle-minus fa-xl has-text-grey"></i>
     <% end if item.number > 1 %>
   </div>
@@ -12,10 +14,13 @@
   <div class="control">
     <%= form_with(theme: nil, url: { controller: 'trade/our/items', action: 'update', id: item.id }, method: :patch, state: 'redirect_return', data: { turbo_scroll: true, controller: 'input' }) do |f| %>
       <%= f.number_field :number, value: item.number, data: { action: 'change->input#form' }, class: 'has-background-light has-text-centered', style: 'width: 30px' %>
+      <%= f.text_field :current_cart_id, value: @cart.id %>
     <% end %>
   </div>
   <div class="control">
-    <%= button_to({ controller: 'trade/our/items', action: 'update', id: item.id }, method: :patch, state: 'redirect_return', params: { '[item]number': item.number + 1 }, class: 'ml-1', form: { data: { turbo_scroll: true } }) do %>
+    <%= form_with(theme: nil, url: { controller: 'trade/our/items', action: 'update', id: item.id }, method: :patch, state: 'redirect_return', class: 'ml-1', form: { data: { turbo_scroll: true } }) do %>
+      <%= f.number_field :number, value: item.number + 1 %>
+      <%= f.text_field :current_cart_id, value: @cart.id %>
       <i class="fa-solid fa-circle-plus fa-xl has-text-dark-grey"></i>
     <% end %>
   </div>
