--- a/app/views/factory/our/productions/_members/_production.html.erb
+++ b/app/views/factory/our/productions/_members/_production.html.erb
@@ -1,8 +1,8 @@
 <div class="weui-media-box weui-media-box_appmsg">
-  <div class="weui-media-box__hd">
+  <div data-controller="empty" class="weui-media-box__hd">
     <%= link_to({ controller: 'productions', action: 'show', id: model.id }, state: 'enter', text: true) do %>
-      <%= image_tag model.product.logo, class: 'image is-64x64' if model.product.logo.attached? %>
-    <% end %>
+      <%= image_tag model.product.logo, class: 'image is-64x64' %>
+    <% end if model.product.logo.attached? %>
   </div>
   <div class="weui-media-box__bd">
     <%= link_to({ controller: 'productions', action: 'show', id: model.id }, state: 'enter', text: true, class: 'is-flex is-flex-direction-column') do %>
@@ -19,7 +19,7 @@
       </ul>
       <div>
         <span class="has-text-danger"><%= model.price.to_money.format.html_safe %></span>
-        <% current_cart.cards.each do |card| %>
+        <% @cart.cards.each do |card| %>
         <div class="tags has-addons control m-0" style="display: inline-flex">
           <div class="tag is-success"><%= card.card_template.code %></div>
           <div class="tag is-light"><%= model.card_price.fetch(card.card_template.code, model.price).to_money.format.html_safe %></div>
