--- a/app/views/factory/admin/products/index.html.erb
+++ b/app/views/factory/admin/products/index.html.erb
@@ -1,7 +1,7 @@
 <%= render 'filter_form' %>
 <%= render 'button' %>
 
-<%= render layout: 'index_table' do %>
+<%= render layout: 'index_sortable_table' do %>
   <%= render partial: 'index_tbody', layout: 'index_tr', collection: @products, as: :model %>
 <% end %>
 
