--- a/app/views/application/_covers.html+phone.erb
+++ b/app/views/application/_covers.html+phone.erb
@@ -1,6 +1,6 @@
 <div data-controller="slide" data-slide-debug-value="true" data-slide-circle-value="true" data-slide-duration="1s" data-slide-target="container" class="slide is-1by1">
 <% model.covers.each_with_index do |cover, index| %>
-  <figure class="image" data-action="touchmove->slide#move:passive touchend->slide#end:passive" data-index="<%= index %>" style="z-index: <%= index == 0 ? 1 : -1 %>">
+  <figure class="image" data-action="touchmove->slide#move:passive touchend->slide#end:passive" data-index="<%= index %>">
     <% if cover.content_type.to_s.start_with?('video') %>
       <%= video_tag cover.url, controls: true %>
     <% else %>
