make scenes logic works

--- a/app/views/factory/produce_plans/overview.html.erb
+++ b/app/views/factory/produce_plans/overview.html.erb
@@ -1,4 +1,4 @@
 <%= render 'produce_plan_nav_bar' %>
 
 
-<%= render partial: 'produce_plan', collection: @scenes, as: :scene %>
+<%= render partial: 'scene', collection: @scenes, as: :scene %>
