--- a/app/views/factory/our/productions/_members/_trade_item.html+phone.erb
+++ b/app/views/factory/our/productions/_members/_trade_item.html+phone.erb
@@ -1,16 +1,15 @@
 <div class="level is-flex">
   <div class="level-left is-flex">
-    <%= form_with theme: nil, model: item, url: { controller: 'trade/in/items', action: 'update', id: item.id }, data: { controller: 'input' }, class: 'is-inline level-item mb-0' do |f| %>
+    <%= form_with theme: nil, model: item, url: { controller: 'trade/our/items', action: 'update', id: item.id }, data: { controller: 'input' }, class: 'is-inline level-item mb-0' do |f| %>
       <%= f.check_box :status, { checked: item.status_checked?, data: { action: 'click->input#form' }, id: nil }, item.id %>
     <% end %>
     <div class="level-item ml-2">
       <span class="has-text-grey"><%= item.good_name %></span>
-      <span class="has-text-danger ml-2"><%= item.single_price.to_money.format.html_safe %></span>
     </div>
   </div>
   <div class="level-right is-flex mt-0">
     <div class="level-item mb-0">
-      <span><%= item.amount.to_money.format.html_safe %></span>
+      <span class="has-text-danger"><%= item.amount.to_money.format.html_safe %></span>
     </div>
     <div class="level-item ml-2">
       <%= render partial: 'cart', locals: { item: item } %>
