--- a/app/views/factory/admin/production_items/_index/_button.html.erb
+++ b/app/views/factory/admin/production_items/_index/_button.html.erb
@@ -1,10 +1,14 @@
+<% if params[:production_plan_id] %>
 <div class="buttons are-small mb-0">
   <%= form_with theme: nil, model: @production_item, url: { action: 'create' } do |f| %>
     <%= f.hidden_field :qr_code %>
+    <%= f.hidden_field :production_plan_id, value: params[:production_plan_id] %>
     <%= f.hidden_field :came_at, value: Time.current.to_s(:local) %>
     <%= f.submit '新增', class: 'button is-info' %>
   <% end %>
-  <%= form_with theme: nil, model: @production_item, url: { action: 'batch' }, class: 'ml-2' do |f| %>
+  <%= form_with theme: nil, scope: nil, model: @production_item, url: { action: 'batch' }, class: 'ml-2' do |f| %>
+    <%= f.hidden_field :production_plan_id, value: params[:production_plan_id] %>
     <%= f.submit '批量新增', class: 'button is-info' %>
   <% end %>
 </div>
+<% end %>
