--- a/app/views/factory/productions/_base/_production.html+phone.erb
+++ b/app/views/factory/productions/_base/_production.html+phone.erb
@@ -20,7 +20,7 @@
       <span class="has-text-danger"><%= model.price.to_money.format.html_safe %></span>
       <% @card_templates.select(&->(i){ model.card_price.keys.include?(i.code) }).each do |card_template| %>
         <div class="tags has-addons is-price control m-0 ml-2" style="display: inline-flex">
-          <% if current_cart && current_cart.cards.map(&->(i){ i.card_template.code }).include?(card_template.code) %>
+          <% if @cart && @cart.cards.map(&->(i){ i.card_template.code }).include?(card_template.code) %>
             <div class="tag is-danger">
               <i class="fa-solid fa-badge-check"></i>
               <span style="padding-left: 1px"><%= card_template.code %></span>
