--- a/app/views/factory/productions/_show/_tab_bar.html.erb
+++ b/app/views/factory/productions/_show/_tab_bar.html.erb
@@ -1,6 +1,6 @@
 <div class="columns is-mobile has-border-top is-safe-bottom m-0" style="z-index: 500">
   <div class="column is-half is-flex is-justify-content-center is-align-items-center">
-    <%= render partial: 'cart', locals: { model: @production, cart: @cart } %>
+    <%= render partial: 'cart', locals: { model: @production, item_con: 'trade/my/items' } %>
   </div>
   <div class="column is-half">
     <%= link_to({ controller: 'trade/my/carts', action: 'show', id: @cart.id }, state: 'enter', class: 'button is-danger') do %>
