--- a/app/views/admin/_factory_nav.html+phone.erb
+++ b/app/views/admin/_factory_nav.html+phone.erb
@@ -1,7 +1,7 @@
 <div data-controller="empty" class="weui-panel is-box is-borderless">
   <div class="weui-panel__hd is-flex is-justify-content-space-between">
     <div>
-      <i class="fa-solid fa-fw fa-store"></i>
+      <i class="fa-solid fa-fw fa-store has-text-primary"></i>
       <span><%= t('factory.admin.title') %></span>
     </div>
     <%= link_to({ controller: '/factory/productions' }, target: '_blank') do %>
@@ -12,22 +12,22 @@
   <div class="weui-panel__bd">
     <div class="columns is-4-mobile is-flex is-vcentered is-centered m-0 is-shadow" data-empty-target="content">
       <%= link_to({ controller: 'factory/admin/product_taxons' }, class: 'column has-block-centered') do %>
-        <div class="has-text-grey-dark">
+        <div class="has-text-primary">
           <i class="fa-solid fa-fw fa-xl fa-folder-tree"></i>
         </div>
-        <div class="has-text-dark"><%= t('factory.admin.product_taxons.index.title') %></div>
+        <div class="has-text-grey is-size-7 mt-1"><%= t('factory.admin.product_taxons.index.title') %></div>
       <% end %>
       <%= link_to({ controller: 'factory/admin/scenes' }, class: 'column has-block-centered') do %>
-        <div class="has-text-grey-dark">
+        <div class="has-text-primary">
           <i class="fa-solid fa-fw fa-xl fa-lightbulb"></i>
         </div>
-        <div class="has-text-dark"><%= t('factory.admin.scenes.index.title') %></div>
+        <div class="has-text-grey is-size-7 mt-1"><%= t('factory.admin.scenes.index.title') %></div>
       <% end %>
       <%= link_to({ controller: 'factory/admin/brands' }, class: 'column has-block-centered') do %>
-        <div class="has-text-grey-dark">
+        <div class="has-text-primary">
           <i class="fa-solid fa-fw fa-xl fa-copyright"></i>
         </div>
-        <div class="has-text-dark"><%= t('factory.admin.brands.index.title') %></div>
+        <div class="has-text-grey is-size-7 mt-1"><%= t('factory.admin.brands.index.title') %></div>
       <% end %>
     </div>
   </div>
