--- a/app/views/factory/admin/product_taxons/_index/_index_tr.html+phone.erb
+++ b/app/views/factory/admin/product_taxons/_index/_index_tr.html+phone.erb
@@ -1,5 +1,5 @@
 <div class="weui-media-box weui-media-box_appmsg">
-  <div class="weui-media-box__bd">
+  <div class="weui-media-box__bd pl-4">
     <%= yield %>
   </div>
   <div class="weui-media-box__ft">
