--- a/app/views/factory/admin/products/_index/_index_tr.html+phone.erb
+++ b/app/views/factory/admin/products/_index/_index_tr.html+phone.erb
@@ -1,4 +1,7 @@
 <div class="weui-media-box weui-media-box_appmsg">
+  <div data-controller="empty" class="weui-media-box__hd">
+    <%= image_tag model.logo.variant(resize_to_limit: [80, 80]), class: 'image is-64x64' if model.logo.attached? %>
+  </div>
   <div class="weui-media-box__bd">
     <%= yield %>
   </div>
