--- a/app/views/factory/admin/productions/_actions.html.erb
+++ b/app/views/factory/admin/productions/_actions.html.erb
@@ -7,6 +7,6 @@
   <span><%= t('.destroy') %></span>
 <% end %>
 <%= link_to({ controller: 'production_plans', production_id: model.id }, class: 'weui-actionsheet__cell') do %>
-  <i class="fa-regular fa-list-timeline"></i>
+  <i class="fa-solid fa-list-timeline"></i>
   <span><%= t('factory.admin.production_plans.index.title') %></span>
 <% end %>
