--- a/app/views/factory/admin/products/_index/_index_tbody.html+phone.erb
+++ b/app/views/factory/admin/products/_index/_index_tbody.html+phone.erb
@@ -1,2 +1,5 @@
-<strong class="weui-media-box__title"><%= link_to model.name, { controller: 'productions', product_id: model.id }, text: true %></strong>
+<%= link_to({ controller: 'productions', product_id: model.id }, text: true, class: 'weui-media-box__title has-text-link') do %>
+  <strong><%= model.name %></strong>
+  <span class="tag"><%= model.productions_count %></span>
+<% end %>
 <p class="weui-media-box__desc"><%= model.qr_prefix %></p>
