--- a/app/views/factory/productions/show.html.erb
+++ b/app/views/factory/productions/show.html.erb
@@ -10,7 +10,7 @@
         <span id="total_price"><%= @production.price.to_money.to_s %></span>
       </div>
       <div class="is-flex">
-        <%= render partial: 'cart', locals: { model: @production } if @cart %>
+        <%= render partial: 'cart', locals: { model: @production, item_con: 'trade/my/items' } if @cart %>
       </div>
     </div>
   </div>
