--- a/app/views/factory/admin/scenes/_actions.html.erb
+++ b/app/views/factory/admin/scenes/_actions.html.erb
@@ -7,6 +7,6 @@
   <span><%= t('.destroy') %></span>
 <% end %>
 <%= link_to({ controller: 'produce_plans', scene_id: model.id }, class: 'weui-actionsheet__cell') do %>
-  <i class="fa-regular fa-hammer"></i>
+  <i class="fa-solid fa-hammer"></i>
   <span><%= t('factory.admin.produce_plans.index.title') %></span>
 <% end %>
