--- a/app/views/factory/admin/productions/_index/_top_bar.html+phone.erb
+++ b/app/views/factory/admin/productions/_index/_top_bar.html+phone.erb
@@ -3,7 +3,10 @@
     <%= link_to({ controller: 'products', product_taxon_id: @product.product_taxon_id }, class: 'px-4') do %>
       <i class="fa-solid fa-lg fa-fw-1 fa-angle-left"></i>
     <% end %>
-    <div class="weui-title"><%= @product.name %></div>
+    <div class="weui-title is-flex-direction-column">
+      <div><%= @product.name %></div>
+      <div><%= t('.title') %></div>
+    </div>
     <i style="width: 3rem"></i>
   </div>
 </div>
