--- a/app/views/admin/_factory_nav.html+phone.erb
+++ b/app/views/admin/_factory_nav.html+phone.erb
@@ -1,5 +1,5 @@
 <div data-controller="empty" class="weui-panel is-box is-borderless">
-  <div class="weui-panel__hd is-flex is-justify-content-space-between">
+  <div class="weui-panel__hd has-block-space-between">
     <div>
       <i class="fa-solid fa-fw fa-store has-text-primary"></i>
       <span><%= t('factory.admin.title') %></span>
