tags has-addons

--- a/app/views/factory/admin/productions/_index/_index_tbody.html+phone.erb
+++ b/app/views/factory/admin/productions/_index/_index_tbody.html+phone.erb
@@ -2,5 +2,28 @@
   <span><%= model.name %></span>
   <span class="tag"><%= model.state_i18n %></span>
 </p>
-<p class="weui-media-box__desc"><%= model.qr_code %></p>
+<div class="is-flex mt-1">
+<% if model.default %>
+  <div class="tags has-addons mr-2">
+    <span class="tag mb-1"><%= Factory::Production.human_attribute_name(:default) %></span>
+    <span class="tag is-primary mb-1"><i class="fa-solid fa-check"></i></span>
+  </div>
+<% else %>
+  <div class="tags has-addons mr-2">
+    <span class="tag mb-1"><%= Factory::Production.human_attribute_name(:default) %></span>
+    <span class="tag is-danger mb-1"><i class="fa-solid fa-times"></i></span>
+  </div>
+<% end %>
+<% if model.enabled %>
+  <div class="tags has-addons">
+    <span class="tag mb-1"><%= Factory::Production.human_attribute_name(:enabled) %></span>
+    <span class="tag is-primary mb-1"><i class="fa-solid fa-check"></i></span>
+  </div>
+<% else %>
+  <div class="tags has-addons">
+    <span class="tag mb-1"><%= Factory::Production.human_attribute_name(:enabled) %></span>
+    <span class="tag is-danger mb-1"><i class="fa-solid fa-times"></i></span>
+  </div>
+<% end %>
+</div>
 <p class="has-text-danger"><%= model.price.to_money.format.html_safe %></p>
