--- a/app/views/admin/_factory_nav.html.erb
+++ b/app/views/admin/_factory_nav.html.erb
@@ -1,6 +1,6 @@
 <div class="<%= active_helper(modules: 'factory/admin', active: 'menu ex-accordion is-active', item: 'menu ex-accordion is-active') %>" data-controller="menu empty">
   <a class="menu-label" data-action="menu#toggle">
-    <i class="fa-solid fa-store fa-fw"></i>
+    <i class="fa-solid fa-fw fa-store"></i>
     <span><%= t('factory.admin.title') %></span>
     <i class="fa-solid dropdown"></i>
   </a>
@@ -13,7 +13,7 @@
 </div>
 <div class="<%= active_helper(modules: 'factory/in', active: 'menu ex-accordion is-active', item: 'menu ex-accordion is-active') %>" data-controller="menu empty">
   <a class="menu-label" data-action="menu#toggle">
-    <i class="fa-solid fa-fw fa-store"></i>
+    <i class="fa-solid fa-fw fa-cart-shopping"></i>
     <span><%= t('factory.in.title') %></span>
     <i class="fa-solid dropdown"></i>
   </a>
