--- a/app/views/factory/admin/productions/_index/_index_tr.html.erb
+++ b/app/views/factory/admin/productions/_index/_index_tr.html.erb
@@ -9,7 +9,7 @@
         <%= link_to({ controller: 'production_items', production_id: model.id }, aria: { label: t('factory.admin.production_items.index.title') }, class: 'button is-small is-rounded is-light') do %>
           <i class="fa-solid fa-list has-text-success"></i>
         <% end %>
-        <%= link_to({ controller: 'trade/admin/rent_charges', rentable_type: model.class_name, rentable_id: model.id }, aria: { label: t('trade.admin.rent_charges.index.title') }, class: 'button is-small is-rounded is-light') do %>
+        <%= link_to({ controller: 'trade/admin/rent_charges', rentable_type: model.class_name, rentable_id: model.id }, state: 'enter', aria: { label: t('trade.admin.rent_charges.index.title') }, class: 'button is-small is-rounded is-light') do %>
           <i class="fa-solid fa-clock-rotate-left"></i>
         <% end %>
         <%= link_to({ controller: 'trade_items', production_id: model.id }, aria: { label: t('factory.admin.trade_items.index.title') }, class: 'button is-small is-rounded is-light') do %>
