--- a/app/views/factory/admin/products/_index/_index_tbody.html.erb
+++ b/app/views/factory/admin/products/_index/_index_tbody.html.erb
@@ -2,10 +2,12 @@
   <div class="is-several">
     <i class="fa-solid fa-fw fa-bars has-text-grey is-drawable"></i>
     <%= image_tag model.logo.variant(resize_to_limit: [80, 80]), class: 'image is-32x32' if model.logo.attached? %>
-    <%= link_to model.name, { controller: 'productions', product_id: model.id }, text: true %>
-    <%= link_to({ controller: 'productions', product_id: model.id }, aria: { label: t('factory.admin.productions.index.title') }, class: 'button is-small is-rounded is-light') do %>
-      <i class="fa-regular fa-clone"></i>
-      <span class="pl-1"><%= model.productions_count %></span>
+    <%= link_to({ controller: 'productions', product_id: model.id }, aria: { label: t('factory.admin.productions.index.title') }, text: true) do %>
+      <span><%= model.name %></span>
+      <span class="tag is-light">
+        <i class="fa-solid fa-clone"></i>
+        <span class="pl-1"><%= model.productions_count %></span>
+      </span>
     <% end %>
   </div>
 </td>
