--- a/app/views/factory/productions/_base/_production.html+phone.erb
+++ b/app/views/factory/productions/_base/_production.html+phone.erb
@@ -17,10 +17,10 @@
       <% end %>
     </ul>
     <div class="has-block-space-between">
-      <div>
+      <div class="has-inline-centered">
         <span class="has-text-danger"><%= model.price.to_money.format.html_safe %></span>
         <% @card_templates.select(&->(i){ model.card_price.keys.include?(i.code) }).each do |card_template| %>
-        <div class="tags has-addons is-price control m-0 ml-2" style="display: inline-flex">
+        <div class="tags has-addons is-price control m-0 ml-2">
           <% if @cart && @cart.cards.map(&->(i){ i.card_template.code }).include?(card_template.code) %>
             <div class="tag is-danger">
               <i class="fa-solid fa-badge-check"></i>
