--- a/app/views/factory/productions/_rent/_production.html+phone.erb
+++ b/app/views/factory/productions/_rent/_production.html+phone.erb
@@ -1,8 +1,8 @@
 <div class="weui-media-box weui-media-box_appmsg" id="production_<%= model.id %>">
-  <%= link_to({ action: 'show', id: model.id }, text: true, class: 'weui-media-box__hd') do %>
+  <%= link_to({ action: 'show', id: model.id }, text: true, class: 'weui-media-box__hd as-logo') do %>
     <%= image_tag model.product.logo, class: 'weui-media-box__thumb' if model.product.logo.attached? %>
   <% end %>
-  <div class="weui-media-box__bd is-flex is-flex-direction-column">
+  <div class="weui-media-box__bd as-body">
     <%= link_to({ action: 'show', id: model.id }, text: true, class: 'weui-media-box__title') do %>
       <%= model.name %>
     <% end %>
