--- a/app/views/factory/productions/_rent/_production.html+phone.erb
+++ b/app/views/factory/productions/_rent/_production.html+phone.erb
@@ -21,7 +21,7 @@
         </span>
       </p>
     <% end %>
-    <div class="is-level is-flex is-justify-content-space-between pt-2">
+    <div class="is-level is-flex is-justify-content-space-between">
       <div class="level-left">
         <div class="level-item">可租用： <%# model.tradable_count %></div>
       </div>
