--- a/app/views/factory/productions/_base/_production.html+phone.erb
+++ b/app/views/factory/productions/_base/_production.html+phone.erb
@@ -33,7 +33,7 @@
         </div>
         <% end %>
       </div>
-      <div>
+      <div class="is-flex">
         <%= render partial: 'cart', locals: { model: model, item_con: item_con } %>
       </div>
     </div>
