moved padding right

--- a/app/views/factory/productions/_rent/_production.html+phone.erb
+++ b/app/views/factory/productions/_rent/_production.html+phone.erb
@@ -7,7 +7,7 @@
       <%= model.name %>
     <% end %>
     <% model.rent_charges.each do |charge| %>
-      <p class="is-flex is-justify-content-space-between pr-6">
+      <p class="is-flex is-justify-content-space-between">
         <span class="has-text-grey">
           <span><%= charge.min %></span>
           <span>~</span>
