--- a/app/views/factory/productions/_rent/_production.html+phone.erb
+++ b/app/views/factory/productions/_rent/_production.html+phone.erb
@@ -1,9 +1,9 @@
 <div class="weui-media-box weui-media-box_appmsg" id="production_<%= model.id %>">
-  <%= link_to({ action: 'show', id: model.id }, text: true, class: 'weui-media-box__hd as-logo') do %>
+  <%= link_to({ action: 'show', id: model.id }, state: 'enter', text: true, class: 'weui-media-box__hd as-logo') do %>
     <%= image_tag model.product.logo, class: 'weui-media-box__thumb' if model.product.logo.attached? %>
   <% end %>
   <div class="weui-media-box__bd as-body">
-    <%= link_to({ action: 'show', id: model.id }, text: true, class: 'weui-media-box__title') do %>
+    <%= link_to({ action: 'show', id: model.id }, state: 'enter', text: true, class: 'weui-media-box__title pb-1') do %>
       <%= model.name %>
     <% end %>
     <% model.rent_charges.each do |charge| %>
@@ -21,14 +21,10 @@
         </span>
       </p>
     <% end %>
-    <div class="is-level is-flex is-justify-content-space-between">
-      <div class="level-left">
-        <div class="level-item">可租用： <%# model.tradable_count %></div>
-      </div>
-      <div class="level-right mt-0">
-        <div class="level-item">
-          <%= render partial: 'cart', locals: { model: model, item_con: item_con } %>
-        </div>
+    <div class="has-block-space-between pt-1">
+      <div class="has-text-danger"><%= model.price.to_money.format.html_safe %></div>
+      <div class="level-item">
+        <%= render partial: 'cart', locals: { model: model, item_con: item_con } %>
       </div>
     </div>
   </div>
