--- a/app/views/factory/productions/_rent/_production.html+phone.erb
+++ b/app/views/factory/productions/_rent/_production.html+phone.erb
@@ -22,7 +22,9 @@
       </p>
     <% end %>
     <div class="has-block-space-between pt-1">
-      <div class="has-text-danger"><%= model.price.to_money.format.html_safe %></div>
+      <div>
+        <span class="has-text-grey">押金：</span><span class="has-text-danger"><%= model.price.to_money.format.html_safe %></span>
+      </div>
       <div class="is-flex">
         <%= render partial: 'cart', locals: { model: model, item_con: item_con } %>
       </div>
