--- a/app/views/factory/admin/production_items/_delivery/_index_tr.html.erb
+++ b/app/views/factory/admin/production_items/_delivery/_index_tr.html.erb
@@ -2,9 +2,9 @@
   <%= yield %>
   <td>
     <div data-show-target="item" style="visibility: hidden">
-      <button class="button is-small is-rounded is-light" data-controller="print" data-print-url-value="<%= url_for(action: 'pdf', id: model.id) %>" data-action="print#doPrint">
-        <i class="fa-solid fa-print has-text-success"></i>
-      </button>
+      <%= button_to({ action: 'update_delivery', id: model.id }, method: :patch, data: { turbo_confirm: t('.confirm') }, aria: { label: t('factory.admin.production_items.update_delivery.title') }, class: 'button is-small is-rounded is-light') do %>
+        <i class="fa-solid fa-list has-text-danger"></i>
+      <% end %>
       <%= button_to({ action: 'print', id: model.id }, method: :patch, data: { turbo_confirm: t('.confirm') }, aria: { label: t('factory.admin.production_items.print.title') }, class: 'button is-small is-rounded is-light') do %>
         <i class="fa-solid fa-print has-text-info"></i>
       <% end %>
