--- a/app/views/factory/productions/_base/_production.html+phone.erb
+++ b/app/views/factory/productions/_base/_production.html+phone.erb
@@ -16,7 +16,7 @@
         <% end %>
       <% end %>
     </ul>
-    <div class="has-block-space-between">
+    <div class="has-block-space-between py-1">
       <div class="has-inline-centered">
         <span class="has-text-danger"><%= model.price.to_money.format.html_safe %></span>
         <% @card_templates.select(&->(i){ model.card_price.keys.include?(i.code) }).each do |card_template| %>
