--- a/app/views/application/_menu_rent.html.erb
+++ b/app/views/application/_menu_rent.html.erb
@@ -1,8 +1,8 @@
-<div class="columns is-mobile px-3 pt-3 mb-0">
-  <%= link_to({ controller: 'factory/productions' }, class: 'column is-half') do %>
+<div class="columns is-mobile m-0">
+  <%= link_to({ controller: 'factory/productions' }, class: 'column is-half pb-0') do %>
     <%= image_tag 'use.png', class: 'image' %>
   <% end %>
-  <%= link_to({ controller: 'factory/productions', action: 'rent' }, class: 'column is-half') do %>
+  <%= link_to({ controller: 'factory/productions', action: 'rent' }, class: 'column is-half pb-0') do %>
     <%= image_tag 'rent.png', class: 'image' %>
   <% end %>
 </div>
