--- a/app/views/application/_menu_productions.html.erb
+++ b/app/views/application/_menu_productions.html.erb
@@ -1,7 +1,7 @@
 <div class="weui-panel is-box is-borderless">
   <div class="weui-panel__bd">
     <div class="columns is-mobile">
-      <%= render partial: 'product_taxon', collection: Factory::ProductTaxon.default_where(default_params).enabled, as: :product_taxon %>
+      <%= render partial: 'menu_item_production', collection: Factory::Production.default_where(default_params).default.limit(3), as: :model %>
     </div>
   </div>
 </div>
