--- a/app/views/application/_menu_productions.html.erb
+++ b/app/views/application/_menu_productions.html.erb
@@ -1,4 +1,4 @@
-<div class="weui-panel is-box is-borderless">
+<div class="weui-panel is-box is-borderless has-border">
   <div class="weui-panel__hd">
     <span class="tag is-danger">限时特价</span>
   </div>
