--- a/app/views/factory/admin/product_taxons/_index/_index_thead.html.erb
+++ b/app/views/factory/admin/product_taxons/_index/_index_thead.html.erb
@@ -2,5 +2,8 @@
 <th><%= Factory::ProductTaxon.human_attribute_name(:name) %></th>
 <th><%= Factory::ProductTaxon.human_attribute_name(:scene_id) %></th>
 <th><%= Factory::ProductTaxon.human_attribute_name(:products_count) %></th>
-<th><%= Factory::ProductTaxon.human_attribute_name(:enabled) %></th>
+<th>
+  <p><%= Factory::ProductTaxon.human_attribute_name(:enabled) %></p>
+  <p><%= Factory::ProductTaxon.human_attribute_name(:nav) %></p>
+</th>
 <th><%= Factory::ProductTaxon.human_attribute_name(:partial) %></th>
